--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "nodeJSbasics",
+  "name": "nodejsbasics",
   "version": "1.0.0",
   "description": "basics of NodeJS",
-  "main": "index.js",
-  "type": "commonjs",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,11 @@
   },
   "homepage": "https://github.com/Nechir-89/nodeJSbasics#readme",
   "devDependencies": {
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/node": "^18.7.13"
   }
 }
